# aeac-2026

./: .Makefile.swp  .env  .gitignore  .gitmodules  Makefile  ReadMe.md  ReadMe.txt  makefile_cheatsheet.md  procédure.md  rosbags_cheatsheet.md  ssh-key-guide.md  test_zenmav.py  tuning_cheatsheet.md
compose/: crashproof.yml  dev-os.yml  dev.yml  mavros.yml  nvidia_dev.yml  payload.yml  recon.yml  relay.yml  vision-hexa.yml  vision.yaml  vision.yml  water.yml  zed.yml  zed_mini.yml  zenoh-air.yml  zenoh-bridge.yml  zenoh-ground-os.yml  zenoh-ground.yml
compose/workspaces/vision_ws/log/: latest_build
compose/workspaces/vision_ws/src/install/: local_setup.sh  setup.sh
compose/workspaces/vision_ws/src/log/: latest_build
config/: config.json5  mavros_zenith.yaml  rpp_controller.yaml  zenith_stereo.yaml  zenith_stereo_copy.yaml  zenith_stereo_mini.yaml  zenith_stereo_od.yaml  zenith_stereo_slam.yaml  zenoh-air-config.json5  zenoh-config.json5  zenoh-ground-config-os.json5  zenoh-ground-config.json5
configs/: zenith_stereo.yaml
docker/: Dockerfile.vision_test  dockerfile.dev  dockerfile.mavros  dockerfile.mavros.source  dockerfile.nvidia_dev  dockerfile.payload  dockerfile.relay  dockerfile.vision  dockerfile.water  dockerfile.zenoh-mdns  requirements_v1.txt
lua/: dji-rs2-driver.lua  mount-djirs2-driver.lua
models/: phase1_nano.yaml
relay/: sim.conf
scripts/: build_ws.sh  ensure_submodules.sh  link_ws.sh  mavros-jetson.sh
systemd/: install_guide.md  lo-multicast.service  mavros-jetson.service  payload.service  vision.service  water.service  zed-mini.service  zed.service  zenoh-air.service
workspaces/: approach_log_polar.csv
workspaces/ground_station_ws/: pkgs.txt
workspaces/ground_station_ws/src/: custom_interfaces
workspaces/ground_station_ws/src/payload_web_server_node/: CMakeLists.txt  package.xml
workspaces/ground_station_ws/src/payload_web_server_node/src/: payload_web_server_node.cpp
workspaces/ground_station_ws/src/upload_controller/: package.xml  setup.cfg  setup.py
workspaces/ground_station_ws/src/upload_controller/upload_controller/: send_photo_mock.py  water_image_uploader.py
workspaces/ground_station_ws/src/water_web_server_node/: CMakeLists.txt  package.xml
workspaces/ground_station_ws/src/water_web_server_node/include/water_web_server_node/: water_web_server_node.hpp
workspaces/ground_station_ws/src/water_web_server_node/src/: water_web_server_node.cpp
workspaces/ground_station_ws/src/water_web_server_node/web_components/css/: style.css
workspaces/ground_station_ws/src/water_web_server_node/web_components/html/: index.html
workspaces/ground_station_ws/src/water_web_server_node/web_components/js/: script.js
workspaces/ground_station_ws/src/web_server_node/: CMakeLists.txt  package.xml
workspaces/ground_station_ws/src/web_server_node/include/web_server_node/: web_server_node.hpp
workspaces/ground_station_ws/src/web_server_node/src/: web_server_node.cpp
workspaces/ground_station_ws/src/web_server_node/web_components/css/: style.css
workspaces/ground_station_ws/src/web_server_node/web_components/html/: index.html
workspaces/ground_station_ws/src/web_server_node/web_components/js/: script.js
workspaces/payload_ws/: mannette.launch.py  pkgs.txt
workspaces/payload_ws/src/: vision
workspaces/payload_ws/src/control_nav/: package.xml  setup.py
workspaces/payload_ws/src/control_nav/config/: cimetiere_course.json  compe_course.json  lap_champs.json
workspaces/payload_ws/src/control_nav/control_nav/: control_nav.py
workspaces/payload_ws/src/control_nav/data/: lap_waypoints.json  lap_waypoints_colin.json
workspaces/payload_ws/src/mission_stats_controller/: package.xml  setup.cfg  setup.py
workspaces/payload_ws/src/mission_stats_controller/mission_stats_controller/: mission_stats_controller.py
workspaces/payload_ws/src/payload/: package.xml  setup.cfg  setup.py
workspaces/payload_ws/src/payload/payload/: PayloadControler.py  PayloadController.py
workspaces/payload_ws/src/remote_controller_interface/: setup.cfg  setup.py
workspaces/payload_ws/src/remote_controller_interface/remote_controller_interface/: rc_simulator.py  remote_controller_interface.py
workspaces/payload_ws/src/state/: package.xml  setup.py
workspaces/payload_ws/src/state_p/: package.xml  setup.cfg  setup.py
workspaces/recon_ws/: pkgs.txt
workspaces/recon_ws/src/: nav_stack  tools
workspaces/recon_ws/src/state/: package.xml  setup.py
workspaces/recon_ws/src/state/state/: init_node.py
workspaces/vision_ws/: pkgs.txt
workspaces/vision_ws/src/: vision
workspaces/vision_ws/src/bringup/: bringup
workspaces/vision_ws/src/camera_publisher/: package.xml  setup.py
workspaces/vision_ws/src/camera_publisher/camera_publisher/: camera_publisher.py
workspaces/water_ws/: pkgs.txt
workspaces/water_ws/src/: polar_system  ros2_gremsy
workspaces/water_ws/src/control_nav/: setup.cfg  setup.py
workspaces/water_ws/src/control_nav/control_nav/: control_nav.py
workspaces/water_ws/src/control_nav/data/: waypoints.json
workspaces/water_ws/src/gimbal_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
workspaces/water_ws/src/gimbal_controller/gimbal_controller/: gimbal_mavros.py  gimbal_test_node.py
workspaces/water_ws/src/gimbal_controller/include/gimbal_controller/: gremsy.hpp
workspaces/water_ws/src/gimbal_controller/src/: gremsy.cpp
workspaces/water_ws/src/mission_stats_controller/: CMakeLists.txt  package.xml
workspaces/water_ws/src/mission_stats_controller/include/mission_stats_controller/: mission_stats_controller.hpp
workspaces/water_ws/src/mission_stats_controller/src/: mission_stats_controller.cpp
workspaces/water_ws/src/remote_controller_interface/: package.xml  setup.py
workspaces/water_ws/src/shoot_and_capture/: package.xml  setup.cfg  setup.py
workspaces/water_ws/src/state_w/: package.xml  setup.cfg  setup.py
workspaces/water_ws/src/water_payload/: package.xml  setup.cfg  setup.py
workspaces/ws_heavy_task_1/src/: UI
zenoh/: config.json5
(+11 files in other folders)
